--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:description" content="결혼식에 초대합니다.">
+    <meta property="og:image" href="./images/title.png">
     <title>강성호 ♥ 손은총</title>
     <link rel="shortcut icon" href="./images/favicon-01.png">
     <link rel="stylesheet" href="./style.css">
@@ -39,20 +41,22 @@
             <h1>~ 초대합니다 ~</h1>
         </div>
         <div class="invitation-text">
-            <p>
-                 저희 두 사람이 사랑과 믿음으로 <br>
-                 한 가정을 이루게 되었습니다. <br>
-                 처음과 같이 사랑하며 살겠습니다. <br>
-                 기쁜 날에 함께 자리 하시어 <br>
-                 축복해 주시면 감사하겠습니다.
+            <p class="bible">
+                그런즉 이제 둘이 아니요 한 몸이니<br>
+                그러므로 하나님이 짝지어 주신 것을<br>
+                사람이 나누지 못할지니라 하시니<br>
+                마태복음 19:6 <br>
             </p>
             <p>
-                <span>故강정원 · 박묘경의 차남</span>신랑 강성호 <br>
-                <span>손호송 · 금미희의 차녀</span>신부 손은총
+                저희 두 사람이 사랑과 믿음으로<br>
+                행복한 가정을 이루고자 합니다.<br>
+                처음과 같이 사랑하며 살겠습니다.<br>
+                기쁜 날에 귀한 걸음 하시어<br>
+                축복해주시길 바랍니다.
             </p>
-            <p>                
-               <span> 2024년 11월 02일 토요일 오후 2시 <br>
-                기독교연합회관 아가페홀</span>
+            <p class="bible">
+                <span>故강정원 · 박묘경의 차남</span> 신랑 강성호 <br>
+                <span>손호송 · 금미희의 차녀</span>  신부 손은총
             </p>
         </div>
         <div class="wedding-day">
@@ -193,7 +197,7 @@
         <div id="map">
         <!-- * 카카오맵 - 지도퍼가기 -->
 <!-- 1. 지도 노드 -->
-<div id="daumRoughmapContainer1724475860844" class="root_daum_roughmap root_daum_roughmap_landing"></div>
+<div id="daumRoughmapContainer1724515292788" class="root_daum_roughmap root_daum_roughmap_landing"></div>
 
 <!--
 	2. 설치 스크립트
@@ -204,11 +208,10 @@
 <!-- 3. 실행 스크립트 -->
 <script charset="UTF-8">
 	new daum.roughmap.Lander({
-		"timestamp" : "1724475860844",
-		"key" : "2kfqr",
+		"timestamp" : "1724515292788",
+		"key" : "2kftv",
 		"mapWidth" : "500",
-		"mapHeight" : "360" ,
-        "align-items" : "center"
+		"mapHeight" : "320"
 	}).render();
 </script>
         </div>
@@ -263,9 +266,23 @@
                         <img src="./images/copy-btn.svg" alt="복사하기">
                     </button>
             </p>
+            <p class="box01">
+                신랑측 | 박묘경 신한은행 :  
+                <input value="110-175-950884" readonly>
+                    <button onclick="copy_to_clipboard(event)">
+                        <img src="./images/copy-btn.svg" alt="복사하기">
+                    </button>
+            </p>
             <p class="box01"> 
                 신부 | 손은총 기업은행 :  
                 <input value="01093050726" readonly>
+                    <button onclick="copy_to_clipboard(event)">
+                        <img src="./images/copy-btn.svg" alt="복사하기">
+                    </button>
+            </p>
+            <p class="box01"> 
+                신부측 | 손호송 국민은행 :  
+                <input value="044-01-03-17261" readonly>
                     <button onclick="copy_to_clipboard(event)">
                         <img src="./images/copy-btn.svg" alt="복사하기">
                     </button>
