--- a/index.html
+++ b/index.html
@@ -195,10 +195,11 @@
             <h1>~ 오시는 길 ~</h1>
         </div>
         <div id="map">
-        <!-- * 카카오맵 - 지도퍼가기 -->
+<!-- * 카카오맵 - 지도퍼가기 -->
 <!-- 1. 지도 노드 -->
-<div id="daumRoughmapContainer1724515292788" class="root_daum_roughmap root_daum_roughmap_landing"></div>
-
+<center>
+    <div id="daumRoughmapContainer1724517665964" class="root_daum_roughmap root_daum_roughmap_landing"></div>
+</center>
 <!--
 	2. 설치 스크립트
 	* 지도 퍼가기 서비스를 2개 이상 넣을 경우, 설치 스크립트는 하나만 삽입합니다.
@@ -208,9 +209,9 @@
 <!-- 3. 실행 스크립트 -->
 <script charset="UTF-8">
 	new daum.roughmap.Lander({
-		"timestamp" : "1724515292788",
-		"key" : "2kftv",
-		"mapWidth" : "300",
+		"timestamp" : "1724517665964",
+		"key" : "2kfu2",
+		"mapWidth" : "350",
 		"mapHeight" : "200"
 	}).render();
 </script>
