--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
                     </a>
                 </li>
             </ul>
+            <p>**사진을 누르면 크게 보실 수 있어요**</p>
             
         </figure>
     </section>
@@ -218,14 +219,12 @@
         </div>
         <div class="add-tel">
             <div class="add-tel-text">
-                <p class="add_name">한국기독교연합회관 연합웨딩홀 3층 아가페홀</p>
-                <p>ADD | 서울 종로구 김상옥로 30</p>
-                <p>TEL | 02-708-4888</p>
-                <div class="add-tel-text2">
-                    <p>1호선 종로5가역 2번 출구 도보 5분거리</p>
-                    <p>자차 이용시 '한국기독교 연합회관'을 검색하세요.</p>
-                </div>
-            </div>
+                <p></p>
+                <p class="add_name">"한국기독교연합회관 연합웨딩홀 3층 아가페홀"</p>
+                <p>주소 : 서울 종로구 김상옥로 30 (02-708-4888)</p>
+                <p>대중교통 : 1호선 종로5가역 2번 출구 도보 5분거리</p>
+                <p>자차이용 : '한국기독교 연합회관'을 검색하세요.</p>
+             
         </div>
     </section>
     <section id="congrat">
@@ -276,14 +275,14 @@
             </p>
             <p class="box01"> 
                 신부 | 손은총 기업은행 :  
-                <input value="01093050726" readonly>
+                <input value="010-9305-0726" readonly>
                     <button onclick="copy_to_clipboard(event)">
                         <img src="./images/copy-btn.svg" alt="복사하기">
                     </button>
             </p>
             <p class="box01"> 
                 신부측 | 손호송 국민은행 :  
-                <input value="044-01-03-17261" readonly>
+                <input value="044-01-0317261" readonly>
                     <button onclick="copy_to_clipboard(event)">
                         <img src="./images/copy-btn.svg" alt="복사하기">
                     </button>
